# rust-cqrs-example

./: Cargo.toml  README.md
src/: lib.rs  queries.rs  services.rs
src/domain/: aggregate.rs  commands.rs  events.rs
