[package]
name = "mybank-cqrs-es-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cqrs-es = "0.4.10"
async-trait = "0.1.74"
serde = { version = "1.0.189", features = ["derive"]}
tokio = { version = "1.33.0", features = ["full"] }
